# router-provisioner

./: README.md  pyproject.toml
devices/cudy_wbr3000uax_v1/: device.yaml
src/router_provisioner/: cli.py  config.py
src/router_provisioner/devices/: cudy_wbr3000uax_v1.py  models.py
tests/: test_cli.py  test_device_detection.py
